--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>fireclaw20</title>
+    <title>EXON Clan</title>
 </head>
 <body>
 <h1>testing and all that</h1>
