--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>EXON Clan</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+
 <body>
-<h1>testing and all that</h1>
-<p>Pro Gamer Moves</p>
+    <header>
+        <h1>testing and all that</h1>
+    </header>
+    <main>
+        <p>Pro Gamer Moves</p>
+    </main>
+    <footer></footer>
 </body>
+
 </html>
