--- a/index.html
+++ b/index.html
@@ -3,16 +3,24 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>EXON Clan</title>
+    <title>Extermination | Project MASS</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
     <header>
-        <h1>testing and all that</h1>
+        <h1>EXON Project MASS</h1>
     </header>
     <main>
-        <p>Pro Gamer Moves</p>
+        <p>The modpack can be downloaded at <a href="https://www.technicpack.net/modpack/exon-project-mass-2.1388453">technic</a></p>
+        <p>
+            You cant connect to the server at following ip's:
+            <ul>
+                <li>play.extermination.ga</li>
+                <li>exon.hopto.org</li>
+            </ul>
+            Both lead to the same server.
+        </p>
     </main>
     <footer></footer>
 </body>
