--- a/index.html
+++ b/index.html
@@ -14,12 +14,10 @@
     <main>
         <p>The modpack can be downloaded at <a href="https://www.technicpack.net/modpack/exon-project-mass-2.1388453">technic</a></p>
         <p>
-            You cant connect to the server at following ip's:
+            You cant connect to the server at following ip:
             <ul>
                 <li>play.extermination.ga</li>
-                <li>exon.hopto.org</li>
             </ul>
-            Both lead to the same server.
         </p>
     </main>
     <footer></footer>
