--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <h1>EXON Project MASS</h1>
     </header>
     <main>
-        <p>The modpack can be downloaded at <a href="https://www.technicpack.net/modpack/exon-project-mass-2.1388453">technic</a></p>
+        <p><a href="https://www.technicpack.net/modpack/exon-project-mass-2.1388453">Modpack Download (technic)</a></p>
         <p>
-            You cant connect to the server at following ip:
+            Server adres:
             <ul>
                 <li>play.extermination.ga</li>
             </ul>
