--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li>play.extermination.ga</li>
             </ul>
         </p>
-        <p><a href="discord">Discord</a></p>
+        <p><a href="discord/">Discord</a></p>
     </main>
     <footer></footer>
 </body>
