--- a/videos/index.html
+++ b/videos/index.html
@@ -12,7 +12,7 @@
     <h1>EXON Project MASS</h1>
 </header>
 <main>
-    <p><video height="360" controls><source src="https://static1.e621.net/data/27/e7/27e72be08a8558e4026c0a4cd90a67d3.webm"></video></p>
+    <p><video height="360" controls><source src="https://static1.e621.net/data/27/e7/27e72be08a8558e4026c0a4cd90a67d3.mp4"></video></p>
 </main>
 <footer></footer>
 </body>
